--- a/nbedit.html
+++ b/nbedit.html
@@ -11,27 +11,51 @@
 </head>
 <body>
   <h2>EMailRechnungen im Richtext Editor</h2>
+  <form id="loginForm" onsubmit="event.preventDefault(); loadAccounts();">
+    <label for="username">Benutzername:</label>
+    <input type="text" id="username" required>
+    <br>
+    <label for="password">Passwort:</label>
+    <input type="password" id="password" required>
+    <br>
+    <button type="submit">Load</button>
+  </form>
   <div id="editor"></div>
-
+  <pre id="output"></pre>
   <!-- Quill JS -->
   <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
   <script>
-    // Beispiel-JSON (normalerweise vom Server/API geladen)
-    const jsonResponse = {
-      Name: "Musterfirma",
-      Adresse: "Musterstr. 123",
-      EMailRechnungen: "rechnungen@musterfirma.de"
-    };
+    async function loadAccounts() {
+      const url = "https://my1001526.de1.crm.cloud.sap/sap/c4c/api/v1/account-service/accounts";
+      const username = document.getElementById('username').value;
+      const password = document.getElementById('password').value;
+      const headers = new Headers();
+      headers.append('Authorization', 'Basic ' + btoa(username + ":" + password));
+      headers.append('Accept', 'application/json');
 
-    // Quill initialisieren
-    const quill = new Quill('#editor', {
-      theme: 'snow'
-    });
-
-    // Feld auslesen & im Editor anzeigen
-    const email = jsonResponse.EMailRechnungen || "";
-    quill.setText(email);
+      document.getElementById('output').textContent = "Lade Daten ...";
+      try {
+        const response = await fetch(url, { headers });
+        if (!response.ok) {
+          document.getElementById('output').textContent =
+            "Fehler: " + response.status + " " + response.statusText;
+          return;
+        }
+        const data = await response.json();
+        // Quill initialisieren
+        const quill = new Quill('#editor', {
+           theme: 'snow'
+        });
+        // Feld auslesen & im Editor anzeigen
+        const email = jsonResponse.firstLineName || "";
+        quill.setText(email);
+        document.getElementById('output').textContent = JSON.stringify(data, null, 2);
+      } catch (error) {
+        document.getElementById('output').textContent = "Fehler: " + error;
+      }
+    }
   </script>
+
 </body>
 </html>
 
