--- a/nbedit.html
+++ b/nbedit.html
@@ -7,11 +7,12 @@
   <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
   <style>
     #editor {height: 200px;}
+    #saveBtn {margin-top: 10px;}
   </style>
 </head>
 <body>
   <h2>EMailRechnungen im Richtext Editor</h2>
-  <form id="loginForm" onsubmit="event.preventDefault(); loadAccounts();">
+  <form id="loginForm" onsubmit="event.preventDefault(); loadAccount();">
     <label for="username">Benutzername:</label>
     <input type="text" id="username" required>
     <br>
@@ -19,13 +20,14 @@
     <input type="password" id="password" required>
     <br>
     <button type="submit">Load</button>
+    <button id="saveBtn" onclick="sveAccount();">Speichern</button>
   </form>
   <div id="editor"></div>
   <pre id="output"></pre>
   <!-- Quill JS -->
   <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
   <script>
-    async function loadAccounts() {
+    async function loadAccount() {
       const url = "https://my1001526.de1.crm.cloud.sap/sap/c4c/api/v1/account-service/accounts/0196d458-fbe9-7000-93f2-2b9d79cb347f";
       const username = document.getElementById('username').value;
       const password = document.getElementById('password').value;
@@ -52,6 +54,34 @@
         document.getElementById('output').textContent = JSON.stringify(data, null, 2);
       } catch (error) {
         document.getElementById('output').textContent = "Fehler: " + error;
+      }
+    }
+
+    async function saveAccount() {
+      const url = "https://my1001526.de1.crm.cloud.sap/sap/c4c/api/v1/account-service/accounts/0196d458-fbe9-7000-93f2-2b9d79cb347f";
+      const username = document.getElementById('username').value;
+      const password = document.getElementById('password').value;
+      const headers = new Headers();
+      headers.append('Authorization', 'Basic ' + btoa(username + ":" + password));
+      headers.append('Accept', 'application/json');
+
+      //document.getElementById('output').textContent = "Speichere ...";
+      data.value.extensions.Lieferinformationen = "Spedi muss immer Slot einholen über Cargoclix, Spedi weiss Bescheid (contact@dslog.fr), ca. 5 Tage vorher (max. 15 Tage vorher möglich) xxx"
+      try {
+        const response = await fetch(apiUrl, {
+          method: 'PATCH',
+          headers: headers,
+          body: JSON.stringify(data)
+        });
+        if (!response.ok) {
+          document.getElementById('output').textContent =
+            "Fehler: " + response.status + " " + response.statusText;
+          return;
+        }
+        const data = await response.json();
+        document.getElementById('output').textContent = "Gespeichert! Antwort:\n" + JSON.stringify(data, null, 2);
+      } catch (err) {
+        document.getElementById('output').textContent = "Fehler: " + err;
       }
     }
   </script>
