--- a/nbedit.html
+++ b/nbedit.html
@@ -20,7 +20,7 @@
     <input type="password" id="password" required>
     <br>
     <button type="submit">Load</button>
-    <button id="saveBtn" onclick="sveAccount();">Speichern</button>
+    <button id="saveBtn" onclick="saveAccount();">Speichern</button>
   </form>
   <div id="editor"></div>
   <pre id="output"></pre>
