--- a/nbedit.html
+++ b/nbedit.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <h2>EMailRechnungen im Richtext Editor</h2>
-  <form id="loginForm" onsubmit="event.preventDefault(); loadAccount();">
+  <form id="loginForm" onsubmit="event.preventDefault(); loadAccount();" data-json="">
     <label for="username">Benutzername:</label>
     <input type="text" id="username" required>
     <br>
@@ -50,6 +50,8 @@
         });
         // Feld auslesen & im Editor anzeigen
         const email = data.value.extensions.Lieferinformationen || "";
+        const form = document.getElementById('loginForm');
+        form.dataset.json=data;
         quill.setText(email);
         document.getElementById('output').textContent = JSON.stringify(data, null, 2);
       } catch (error) {
@@ -66,6 +68,8 @@
       headers.append('Accept', 'application/json');
       console.info("Save!");  
       //document.getElementById('output').textContent = "Speichere ...";
+      const form = document.getElementById('loginForm');
+      const data= form.dataset.json;
       data.value.extensions.Lieferinformationen = "Spedi muss immer Slot einholen über Cargoclix, Spedi weiss Bescheid (contact@dslog.fr), ca. 5 Tage vorher (max. 15 Tage vorher möglich) xxx"
       console.info(JSON.stringify(data, null, 2));
       try {
