--- a/nbedit.html
+++ b/nbedit.html
@@ -69,7 +69,7 @@
       console.info("Save!");  
       //document.getElementById('output').textContent = "Speichere ...";
       const form = document.getElementById('loginForm');
-      //const data = JSON.parse(form.dataset.json);
+      const data = JSON.parse(form.dataset.json);
       console.info(JSON.stringify(data, null, 2));
       data.value.extensions.Lieferinformationen = "Spedi muss immer Slot einholen über Cargoclix, Spedi weiss Bescheid (contact@dslog.fr), ca. 5 Tage vorher (max. 15 Tage vorher möglich) xxx"
       console.info(JSON.stringify(data, null, 2));
