--- a/nbedit.html
+++ b/nbedit.html
@@ -88,8 +88,9 @@
             "Fehler: " + response.status + " " + response.statusText;
           return;
         }
-        const data = await response.json();
-        console.info(JSON.stringify(data, null, 2));
+        const result = await response.json();
+        console.info(result);
+        //console.info(JSON.stringify(data, null, 2));
         document.getElementById('output').textContent = "Gespeichert! Antwort:\n" + JSON.stringify(data, null, 2);
       } catch (err) {
         document.getElementById('output').textContent = "Fehler: " + err;
