--- a/nbedit.html
+++ b/nbedit.html
@@ -75,7 +75,7 @@
       console.info(JSON.stringify(data, null, 2));
       console.info('Send Request');
       try {
-        const response = await fetch(apiUrl, {
+        const response = await fetch(url, {
           method: 'PATCH',
           headers: headers,
           body: JSON.stringify(data)
