--- a/nbedit.html
+++ b/nbedit.html
@@ -78,7 +78,7 @@
         const response = await fetch(url, {
           method: 'PATCH',
           headers: headers,
-          body: JSON.stringify(data)
+          body: '{  extensions: {    Lieferinformationen: "Neuer Wert"  }}'
         });
         
         console.info('Response:');
