--- a/nbedit.html
+++ b/nbedit.html
@@ -78,8 +78,7 @@
       }  ;
 
       console.info(JSON.stringify(data, null, 2));
-      data.value.extensions.Lieferinformationen = "Spedi muss immer Slot einholen über Cargoclix, Spedi weiss Bescheid (contact@dslog.fr), ca. 5 Tage vorher (max. 15 Tage vorher möglich) xxx"
-      console.info(JSON.stringify(data, null, 2));
+      //data.value.extensions.Lieferinformationen = "Spedi muss immer Slot einholen über Cargoclix, Spedi weiss Bescheid (contact@dslog.fr), ca. 5 Tage vorher (max. 15 Tage vorher möglich) xxx"
       console.info('Send Request');
       try {
         const response = await fetch(url, {
