--- a/nbedit.html
+++ b/nbedit.html
@@ -73,7 +73,7 @@
       // Die meisten SAP APIs erwarten beim PATCH nur das geänderte Feld!
       const data = {
         extensions: {
-         Lieferinformationen: lieferinfo
+         Lieferinformationen: 'Test'
        }
       }  ;
 
