--- a/nbedit.html
+++ b/nbedit.html
@@ -84,7 +84,7 @@
         const response = await fetch(url, {
           method: 'PATCH',
           headers: headers,
-          body: JSON.stringify(patchBody)
+          body: JSON.stringify(data)
         });
         
         console.info('Response:');
